<!--
  ~ Copyright (c) 2026 tutosrive. All rights reserved.
  ~
  ~ Author: tutosrive
  ~ GitHub: https://github.com/tutosrive
  ~
  ~ This source code is PROPRIETARY and CONFIDENTIAL.
  ~ Unauthorized copying, modification, or distribution of this file,
  ~ via any medium, is strictly prohibited.
  ~
  ~ This software is provided "as is", without warranty of any kind.
  ~ In no event shall the author be liable for any claim or damages.
  -->

<resources>
    <string name="app_name">Why Sudo?</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="about_page_title">About</string>
    <string name="about_btn_description">Go to About section</string>
    <string name="input_search_main_hint">Search</string>
    <string name="footer_message">© YEAR - tutosrive</string>
    <string name="hint_main_info_command">> Try Search: `apt` or `install pack`</string>
    <string name="loading_msg">Loading…</string>
    <string name="try_reload_msg">Sorry, try reload again…</string>
    <string name="description_logo_image">\"Why Sudo\" Logo</string>
    <string name="copy_clipboard_successfully">Command Copied</string>
    <string name="description_back_button">Go Back</string>
    <string name="description_icon_warning">Icon Yellow Warning</string>
    <string name="title_all_commands_activity">Linux Commands</string>
    <string name="description_btn_go_all_commands">Go To All Commands Section</string>
    <string name="default_command_note_header">## Anyway gentlemen, run this command:</string>
    <string name="btn_license_markwon">Markwon License</string>
    <string name="btn_license_androidx">Androidx License</string>
    <string name="btn_license_sqlcipher">Sqlcipher License</string>
    <string name="description_btn_androidx">license_androidx</string>
    <string name="description_btn_markwon">license_markwon</string>
    <string name="description_btn_sqlcipher">license_sqlcipher</string>
    <string name="general_error">Try restart the app, if the error still on, contact the developer by tutosriveorg@gmail.com.</string>
    <string name="error_dialog_title">Something went wrong</string>
    <string name="btn_dialog_close">Close</string>
    <string name="description_badge_command_pro_free">Badge image to show PRO or FREE</string>
    <string name="label_home">Home</string>
    <string name="label_all_commands">All Commands</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_settings">Settings</string>
    <string name="label_btn_accept_remove">Yes, Remove</string>
    <string name="label_btn_close">No, Close</string>
</resources>