<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/label_home"
        app:cnb_iconColor="@color/ligth_blue_alpha"/>
    <item
        android:id="@+id/menu_all_commands"
        android:icon="@drawable/ic_list"
        android:title="@string/label_all_commands"
        app:cnb_iconColor="@color/ligth_blue_alpha" />

    <item
        android:id="@+id/menu_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/label_favorites"
        app:cnb_iconColor="@color/ligth_blue_alpha" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/label_settings"
        app:cnb_iconColor="@color/ligth_blue_alpha" />

</menu>