<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 tutosrive. All rights reserved.
  ~
  ~ Author: tutosrive
  ~ GitHub: https://github.com/tutosrive
  ~
  ~ This source code is PROPRIETARY and CONFIDENTIAL.
  ~ Unauthorized copying, modification, or distribution of this file,
  ~ via any medium, is strictly prohibited.
  ~
  ~ This software is provided "as is", without warranty of any kind.
  ~ In no event shall the author be liable for any claim or damages.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AllCommandsFragment">

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/description_back_button"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/title_all_commands_activity"
        android:textColor="@color/text_color_on_dark"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/erroLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:alpha="0.20"
            android:contentDescription="@string/description_icon_warning"
            app:srcCompat="@android:drawable/stat_notify_error"
            app:tint="@android:color/holo_orange_light" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_reload_msg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading_msg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/commandsListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allCommandsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp" />

    </LinearLayout>
</FrameLayout>