<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 tutosrive. All rights reserved.
  ~
  ~ Author: tutosrive
  ~ GitHub: https://github.com/tutosrive
  ~
  ~ This source code is PROPRIETARY and CONFIDENTIAL.
  ~ Unauthorized copying, modification, or distribution of this file,
  ~ via any medium, is strictly prohibited.
  ~
  ~ This software is provided "as is", without warranty of any kind.
  ~ In no event shall the author be liable for any claim or damages.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stacked_waves_haikei_pruple"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buy_pro_btn_home"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="15dp"
            android:autoLink="web"
            android:backgroundTint="@color/background_dark_glass"
            android:drawableEnd="@drawable/play_store_logo"
            android:fontFamily="monospace"
            android:text="@string/get_pro"
            android:textAlignment="center"
            android:textColor="@color/code_block_color"
            android:textSize="14sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:visibility="gone"
            app:icon="@drawable/play_store_logo"
            app:iconGravity="start"
            app:iconSize="20dp"
            app:iconTint="#00FFFFFF"
            app:iconTintMode="add" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/description_logo_image"
            android:scaleType="center"
            android:translationX="10dp"
            android:translationY="10sp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/allCommandsBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/description_btn_go_all_commands"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/about_btn_description"
            android:onClick="goAbout"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/footerText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:gravity="center"
                android:textColor="@color/on_surface"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:elevation="-1dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:translationX="55sp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/text_color_on_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchInp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="monospace"
                        android:hint="@string/input_search_main_hint"
                        android:inputType="text|textFilter|textAutoComplete"
                        android:textColor="@color/text_color_on_dark"
                        android:textColorHint="@color/secondary_container" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ctnInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/background_dark_glass"
                android:elevation="-1dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/infoTextMain"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:autoLink="web"
                    android:hint="@string/hint_main_info_command"
                    android:padding="10dp"
                    android:scrollbars="none"
                    android:singleLine="false"
                    android:textColor="@color/text_color_on_dark"
                    android:textColorHint="@color/text_color_on_dark" />

                <LinearLayout
                    android:id="@+id/lay_unlock_pro_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:padding="6dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/description_unlock_premium_img"
                        app:srcCompat="@drawable/unlock_pro" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/unlock_pro_home"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:paddingBottom="80dp"
                                android:textSize="20sp" />
                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/listCommands"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/rounded_background"
                android:backgroundTint="@color/background_dark_glass"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:visibility="invisible" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>